--- a/conformance/DynamicServiceValidator/index.html
+++ b/conformance/DynamicServiceValidator/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html><head><meta content="text/html;charset=ISO-8859-1" http-equiv="Content-Type"><script type="text/javascript" src="resources/script/extensions.js"></script><script type="text/javascript" src="resources/script/verify.js"></script><script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script><title>Dynamic Service Conformance</title><style type="text/css">
+<html><head><meta content="text/html;charset=ISO-8859-1" http-equiv="Content-Type"><script type="text/javascript" src="resources/script/extensions.js"></script><script type="text/javascript" src="resources/script/verify.js"></script><title>Dynamic Service Conformance</title><style type="text/css">
 #btnstart {
   border:  none;
   background: transparent url(resources/images/btnstart.png) repeat scroll 0% 50%;
